--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -16,6 +16,8 @@
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A'dan Z'yə",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
+  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "Yüklənir",
   "CANCEL": "Ləğv et",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -56,13 +58,14 @@
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "GÜNCƏLLƏ",
+  "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% ölçəkləməni aktivləşdir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u aktivləşdir",
   "EXIT_NOW_PLAYING": "Çıx, hazırda oynatılır",
   "EXIT_SUBTITLE": "Harmonoid'dən çıxmaq istədiyinə əminsənmi?",
   "EXIT_TITLE": "Çıx",
   "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "GO_TO_SETTINGS": "Tənzimləmələrə get",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
@@ -182,6 +185,8 @@
   "SORT_BY": "Sırala",
   "SPEED": "Sürət",
   "STARTING_PLAYBACK": "Oynatmağa başlanır...",
+  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_TITLE": "Stats",
   "SWITCH_THEME": "Temanı dəyişdir",
   "THEME_MODE_DARK": "Qaranlıq",
   "THEME_MODE_LIGHT": "Aydınlıq",
