--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -16,6 +16,8 @@
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A تا Z",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
+  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "بافرینگ...",
   "CANCEL": "لغو",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -56,13 +58,14 @@
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "دانلود آخرین بروزرسانی",
+  "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "فعال کردن مقیاس 125 درصدی",
   "ENABLE_ACRYLIC_BLUR": "فعال کردن بلور ویندوز",
   "EXIT_NOW_PLAYING": "خروج از پخش آهنگ",
   "EXIT_SUBTITLE": "آیا میخواهید از هارمونوید خارج شوید؟",
   "EXIT_TITLE": "خارج شدن",
   "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "GO_TO_SETTINGS": "رفتن به تنظیمات",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
@@ -182,6 +185,8 @@
   "SORT_BY": "ترتیب بر اساس",
   "SPEED": "سرعت",
   "STARTING_PLAYBACK": "شروع پخش",
+  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_TITLE": "Stats",
   "SWITCH_THEME": "عوض کردن تم",
   "THEME_MODE_DARK": "تیره",
   "THEME_MODE_LIGHT": "روشن",
