--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -16,6 +16,8 @@
   "AUTO_REFRESH_SETTING": "起動した際に新しいファイルをチェックする",
   "AUTO_REFRESH_SETTING_TITLE": "起動時に自動的に音楽を探す",
   "A_TO_Z": "A から Z",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
+  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "バッファしています...",
   "CANCEL": "キャンセル",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "音楽に合わせて\"再生中バー\"の色を変える",
@@ -56,6 +58,7 @@
   "DISCOVERING_FILES": "ファイルを探しています...",
   "DONATE": "寄付",
   "DOWNLOAD_UPDATE": "アップデート",
+  "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
   "EXIT_NOW_PLAYING": "再生中を閉じる",
@@ -182,6 +185,8 @@
   "SORT_BY": "並び順",
   "SPEED": "再生速度",
   "STARTING_PLAYBACK": "再生開始",
+  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_TITLE": "Stats",
   "SWITCH_THEME": "テーマを変更",
   "THEME_MODE_DARK": "ダーク",
   "THEME_MODE_LIGHT": "ライト",
