--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -16,6 +16,8 @@
   "AUTO_REFRESH_SETTING": "Проверять наличие новых файлов при каждом запуске",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "По алфавиту",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
+  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "Буферизация...",
   "CANCEL": "ОТМЕНА",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -56,6 +58,7 @@
   "DISCOVERING_FILES": "Поиск файлов...",
   "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
+  "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
   "EXIT_NOW_PLAYING": "Закрыть очередь",
@@ -182,6 +185,8 @@
   "SORT_BY": "Сортировать",
   "SPEED": "Скорость",
   "STARTING_PLAYBACK": "Воспроизведение",
+  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_TITLE": "Stats",
   "SWITCH_THEME": "Сменить тему",
   "THEME_MODE_DARK": "Тёмная",
   "THEME_MODE_LIGHT": "Светлая",
