--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -16,6 +16,8 @@
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A à Z",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
+  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "Mise en cache...",
   "CANCEL": "Annuler",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -56,13 +58,14 @@
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "Télécharger la mise à jour",
+  "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Activer la mise à l'échelle à 125%",
   "ENABLE_ACRYLIC_BLUR": "TODOActiver le flou acrylique Windows",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Voulez-vous quitter Harmonoid ?",
   "EXIT_TITLE": "Quitter",
   "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "GO_TO_SETTINGS": "Se rendre dans les paramètres",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
@@ -182,6 +185,8 @@
   "SORT_BY": "Sort By",
   "SPEED": "Speed",
   "STARTING_PLAYBACK": "Début de lecture",
+  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_TITLE": "Stats",
   "SWITCH_THEME": "Changer de thème",
   "THEME_MODE_DARK": "Sombre",
   "THEME_MODE_LIGHT": "Clair",
