--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -16,6 +16,8 @@
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "Ábécérend",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
+  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "Betöltés...",
   "CANCEL": "MÉGSE",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -56,13 +58,14 @@
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "FRISSÍTÉS LETÖLTÉSE",
+  "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Windows áttetsző háttér engedélyezése",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Biztosan kilépsz a Harmonoidból?",
   "EXIT_TITLE": "Kilépés",
   "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
@@ -182,6 +185,8 @@
   "SORT_BY": "Sort By",
   "SPEED": "Speed",
   "STARTING_PLAYBACK": "Lejátszás indítása...",
+  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_TITLE": "Stats",
   "SWITCH_THEME": "Téma váltása",
   "THEME_MODE_DARK": "Sötét",
   "THEME_MODE_LIGHT": "Világos",
