--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -16,6 +16,8 @@
   "AUTO_REFRESH_SETTING": "Cek file baru pada saat memulai aplikasi",
   "AUTO_REFRESH_SETTING_TITLE": "Mencari musik otomastis pada saat memulai aplikasi",
   "A_TO_Z": "A ke Z",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
+  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "Buffering...",
   "CANCEL": "BATAL",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Ganti warna \"Bar lagu yang sedang dimainkan\" berdasarkan musik",
@@ -56,6 +58,7 @@
   "DISCOVERING_FILES": "Temukan File...",
   "DONATE": "Donasi",
   "DOWNLOAD_UPDATE": "PERBARUI",
+  "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Aktifkan skala 125% .",
   "ENABLE_ACRYLIC_BLUR": "Aktifkan blur akrilik Windows.",
   "EXIT_NOW_PLAYING": "Tutup yang sedang dimainkan",
@@ -182,6 +185,8 @@
   "SORT_BY": "Urutkan berdasarkan",
   "SPEED": "Kecepatan",
   "STARTING_PLAYBACK": "Memulai playback",
+  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_TITLE": "Stats",
   "SWITCH_THEME": "Ganti Tema",
   "THEME_MODE_DARK": "Gelap",
   "THEME_MODE_LIGHT": "Terang",
