--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -16,6 +16,8 @@
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A tot Z",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
+  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "Bufferen...",
   "CANCEL": "ANNULEER",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -56,13 +58,14 @@
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "UPDATE",
+  "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Vergroting (125%) inschakelen",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylvervaging inschakelen",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Wilt u Harmonoid afsluiten?",
   "EXIT_TITLE": "Afsluiten",
   "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
@@ -182,6 +185,8 @@
   "SORT_BY": "Sort By",
   "SPEED": "Speed",
   "STARTING_PLAYBACK": "Afspelen starten",
+  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_TITLE": "Stats",
   "SWITCH_THEME": "Wissel Thema",
   "THEME_MODE_DARK": "Donker",
   "THEME_MODE_LIGHT": "Licht",
