--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -16,6 +16,8 @@
   "AUTO_REFRESH_SETTING": "Avtomatično preveri za nove datoteke na zagonu",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "Od A do Z",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
+  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "Bufferanje...",
   "CANCEL": "PREKLIČI",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Zamenjaj barvo \"Now Playing Bar\" glede na glasbo, ki jo poslušaš",
@@ -56,6 +58,7 @@
   "DISCOVERING_FILES": "Odkrivam datoteke...",
   "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
+  "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
   "EXIT_NOW_PLAYING": "Zapri trenutno predvajano",
@@ -182,6 +185,8 @@
   "SORT_BY": "Filter",
   "SPEED": "Hitrost",
   "STARTING_PLAYBACK": "Začenjam predvajanje",
+  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_TITLE": "Stats",
   "SWITCH_THEME": "Zamenjaj temo",
   "THEME_MODE_DARK": "Temni",
   "THEME_MODE_LIGHT": "Svetli",
