--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -16,6 +16,8 @@
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A till Ö",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
+  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "Buffrar...",
   "CANCEL": "AVBRYT",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -56,13 +58,14 @@
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "LADDA NER UPPDATERING",
+  "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Aktivera 125% uppskalning.",
   "ENABLE_ACRYLIC_BLUR": "Aktivera Windows akryl suddighet.",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Vill du avsluta Harmonoid?",
   "EXIT_TITLE": "Avsluta",
   "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "GO_TO_SETTINGS": "GÅ TILL INSTÄLLNINGAR",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
@@ -182,6 +185,8 @@
   "SORT_BY": "Sortera Enligt",
   "SPEED": "Speed",
   "STARTING_PLAYBACK": "Startar uppspelning",
+  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_TITLE": "Stats",
   "SWITCH_THEME": "Byt tema",
   "THEME_MODE_DARK": "Mörk",
   "THEME_MODE_LIGHT": "Ljus",
