update fr_FR.json (#257)
Closes: #257

--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -2,7 +2,7 @@
   "ABOUT_SUBTITLE": "Informations sur l'application et ses développeurs",
   "ABOUT_TITLE": "À propos",
   "ADD_NEW_FOLDER": "Ajouter un nouveau répertoire",
-  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
+  "ADD_NEW_FOLDER_SUBTITLE": "Ajouter un nouveau répertoire à la bibliothèque musicale",
   "ADD_TO_NOW_PLAYING": "Ajouter à la liste de lecture",
   "ADD_TO_PLAYLIST": "Ajouter à la playlist",
   "ALBUM": "Albums",
@@ -11,17 +11,17 @@
   "ARTIST": "Artistes",
   "ARTIST_SINGLE": "Artiste",
   "ASCENDING": "Ascendant",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
-  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
-  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Ajouter automatiquement d'autres chansons depuis la collection à \"En cours de lecture\" après la fin de l'album",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Activer la lecture transparente",
+  "AUTO_REFRESH_SETTING": "Rechercher automatiquement de nouveaux fichiers au démarrage",
+  "AUTO_REFRESH_SETTING_TITLE": "Recherche automatique de musique au démarrage",
   "A_TO_Z": "A à Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
   "BUFFERING": "Mise en cache...",
   "CANCEL": "Annuler",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Changer la couleur de la barre \"En cours de lecture\" en fonction de la musique",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Coloration dynamique de la barre \"En cours de lecture\"",
   "COLLECTION": "Collection",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Voulez-vous supprimer cet album ?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Êtes-vous certain de vouloir supprimer cet album ?",
@@ -44,9 +44,9 @@
   "COLLECTION_TRACKS_SUBHEADER": "Pistes de l'album",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette piste ?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Êtes-vous certain de vouloir supprimer cette piste ?",
-  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Supprimer \"TRACK_NAME\" de \"PLAYLIST_NAME\"?",
   "COMING_UP": "À venir",
-  "COPY_LINK": "Copy link",
+  "COPY_LINK": "Copier le lien",
   "CREATE": "Créer",
   "CREATE_NEW_PLAYLIST": "Créer une nouvelle playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Créer une nouvelle playlist pour y ajouter votre musique",
@@ -55,38 +55,38 @@
   "DELETE_TRACK": "Supprimer la piste",
   "DESCENDING": "Descendant",
   "DISCORD": "Serveur Discord",
-  "DISCOVERING_FILES": "Discovering files...",
-  "DONATE": "Donate",
+  "DISCOVERING_FILES": "Découverte des fichiers...",
+  "DONATE": "Faire un don",
   "DOWNLOAD_UPDATE": "Télécharger la mise à jour",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Activer la mise à l'échelle à 125%",
-  "ENABLE_ACRYLIC_BLUR": "TODOActiver le flou acrylique Windows",
-  "EXIT_NOW_PLAYING": "Exit now playing",
+  "ENABLE_ACRYLIC_BLUR": "Activer le flou acrylique Windows",
+  "EXIT_NOW_PLAYING": "Quitter \"En cours de lecture\"",
   "EXIT_SUBTITLE": "Voulez-vous quitter Harmonoid ?",
   "EXIT_TITLE": "Quitter",
-  "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
+  "EXPERIMENTAL": "Expérimental",
+  "EXPERIMENTAL_SUBTITLE": "Ces paramètres ne sont pas marqués comme étant stables.",
   "GO_TO_SETTINGS": "Se rendre dans les paramètres",
-  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
-  "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Une opération d'indexation est déjà en cours. Veuillez patienter.",
+  "INDEXING_ALREADY_GOING_ON_TITLE": "Patienter",
   "INTERNET_ERROR": "Aucune connexion Internet",
   "KNOW_MORE": "En savoir plus",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Un répertoire au moins doit être présent dans votre collection.",
-  "LESS": "Less",
+  "LESS": "Moins",
   "LISTENING_TO_MUSIC": "En écoute 💜",
   "LYRICS": "Paroles",
   "LYRICS_NOT_FOUND": "Paroles non trouvées",
   "LYRICS_RETRIEVING": "Récupération des paroles...",
   "MENU": "Menu",
-  "MORE": "More",
-  "MUTE": "Mute",
+  "MORE": "Plus",
+  "MUTE": "Couper le son",
   "M_TRACKS_AND_N_ALBUMS": "M pistes & N albums",
   "NEXT": "Suivant",
   "NO": "Non",
-  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
+  "NOTHING_IN_QUEUE": "Il n'y a rien dans la file d'attente.",
   "NOTIFICATION_LYRICS_SUBTITLE": "Afficher les paroles dans une notification",
   "NOTIFICATION_LYRICS_TITLE": "Notification de paroles",
-  "NOW_PLAYING": "Lecture en cours",
+  "NOW_PLAYING": "En cours de lecture",
   "NOW_PLAYING_NEXT_TRACK": "Suivant",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Pas de lecture en cours",
   "NOW_PLAYING_PREVIOUS_TRACK": "Précédent",
@@ -98,9 +98,9 @@
   "NO_PLAYLISTS_FOUND": "Aucune playlist trouvée.\nVous pouvez en créer pour les voir ici.",
   "N_TRACKS": "N pistes",
   "OK": "OK",
-  "OPEN_IN_BROWSER": "Open in browser",
+  "OPEN_IN_BROWSER": "Ouvrir dans le navigateur",
   "OPTIONS": "Options",
-  "ORDER": "Order",
+  "ORDER": "Ordre",
   "PAUSE": "Pause",
   "PLAY": "Lire",
   "PLAYLIST": "Playlists",
@@ -112,35 +112,35 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Ajouter à la playlist",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Pistes dans la playlist",
-  "PLAY_INTERNET": "Play from internet",
+  "PLAY_INTERNET": "Lire depuis Internet",
   "PLAY_NOW": "Lire maintenant",
-  "PLAY_URL": "Play URL",
-  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
+  "PLAY_URL": "Lire une URL",
+  "PLAY_URL_SUBTITLE": "Entrer l'URL de la ressource média",
   "PREVIOUS": "Précédent",
-  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
+  "PROXY_SUBTITLE": "Activer le proxy pour les ressources média externes.",
   "PROXY_TITLE": "Proxy",
-  "PROXY_URL": "Proxy URL",
+  "PROXY_URL": "URL du proxy",
   "RECOMMENDATIONS": "Recommandations",
   "REFRESH": "Actualiser",
-  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
-  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
+  "REFRESH_INFORMATION": "Vérifier uniquement les fichiers ajoutés et supprimés pour mettre à jour la bibliothèque musicale (plus rapide)",
+  "REFRESH_SUBTITLE": "Vérifier les fichiers ajoutés et supprimés pour mettre à jour la bibliothèque musicale.",
   "REINDEX": "Ré-indexer",
-  "REINDEX_INFORMATION": "Builds the music library again (slower)",
-  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "Remove",
+  "REINDEX_INFORMATION": "Reconstruire la bibliothèque musicale (plus lent)",
+  "REINDEX_SUBTITLE": "Reconstruire la bibliothèque musicale après avoir effacé la base de données actuelle.",
+  "REMOVE": "Retirer",
   "REMOVE_FROM_PLAYLIST": "Retirer de la playlist",
-  "REPEAT": "Repeat",
+  "REPEAT": "Répéter",
   "RESULTS_FOR_QUERY": "Résultats pour la requête \"QUERY\"",
   "RETRIEVING_INFO": "Récupération d'informations",
   "RETRIEVING_LINK": "Récupération du flux",
-  "SAVE_AS_PLAYLIST": "Save as playlist",
+  "SAVE_AS_PLAYLIST": "Enregistrer comme playlist",
   "SAVE_TO_DOWNLOADS": "Enregistrer dans les téléchargements",
   "SEARCH": "Recherche",
   "SEARCH_COLLECTION": "Recherche d'une collection",
   "SEARCH_HISTORY_SUBHEADER": "Historique des recherches",
   "SEARCH_NO_RECENT_SEARCHES": "L'historique des recherches s'affichera ici",
   "SEARCH_RESULT_LOADER_LABEL": "Récupération de votre musique...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Rechercher dans Harmonoid...",
   "SEE_ALL": "Tout voir",
   "SELECTED_DIRECTORIES": "Répertoires sélectionnés :",
   "SELECTED_DIRECTORY": "Répertoire sélectionné :",
@@ -152,7 +152,7 @@
   "SETTING_APP_VERSION_LATEST": "Dernière version",
   "SETTING_APP_VERSION_SUBTITLE": "Informations sur la version actuelle de l'application",
   "SETTING_APP_VERSION_TITLE": "Version",
-  "SETTING_GITHUB": "GitHub",
+  "SETTING_GITHUB": "Github",
   "SETTING_INDEXING_DONE": "Indexation terminée",
   "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "NUMBER_STRING pistes indexées sur TOTAL_STRING...",
   "SETTING_INDEXING_SUBTITLE": "Sélectionner les répertoires à utiliser pour l'indexation",
@@ -176,14 +176,14 @@
   "SHARE": "Partager",
   "SHOW_ALBUM": "Visualiser l'album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
-  "SHUFFLE": "Shuffle",
-  "SORT": "Sort",
-  "SORT_BY": "Sort By",
-  "SPEED": "Speed",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Basculer sur l'écran \"En cours de lecture\" lors de la lecture",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Afficher l'écran \"En cours de lecture\" après la sélection d'une piste pour lecture",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Activer l'icône dans la barre des tâches",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Afficher le pourcentage de lecture de la piste dans l'icône de la barre des tâches",
+  "SHUFFLE": "Aléatoire",
+  "SORT": "Trier",
+  "SORT_BY": "Trier par",
+  "SPEED": "Vitesse",
   "STARTING_PLAYBACK": "Début de lecture",
   "STATS_SUBTITLE": "Statistical details about your music library",
   "STATS_TITLE": "Stats",
@@ -195,9 +195,9 @@
   "TRACKS_FROM_ARTIST": "Chansons de cet artiste",
   "TRACK_SINGLE": "Chanson",
   "TRANSFERS": "Transferts",
-  "UNMUTE": "Unmute",
-  "UPDATE_AVAILABLE": "Update available: VERSION",
-  "VIDEO_SINGLE": "Video",
+  "UNMUTE": "Réactiver le son",
+  "UPDATE_AVAILABLE": "Mise à jour disponible : VERSION",
+  "VIDEO_SINGLE": "Vidéo",
   "WARNING": "Attention",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Lire votre musique locale en attendant d'être à nouveau connecté.",
