Update Simplified Chinese zh_CN.json file
Update Simplified Chinese zh_CN.json file

--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -2,7 +2,7 @@
   "ABOUT_SUBTITLE": "应用及开发者信息",
   "ABOUT_TITLE": "关于",
   "ADD_NEW_FOLDER": "添加新目录",
-  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
+  "ADD_NEW_FOLDER_SUBTITLE": "添加一个新文件夹到您的音乐库中。",
   "ADD_TO_NOW_PLAYING": "添加到正在播放列表",
   "ADD_TO_PLAYLIST": "添加到播放列表",
   "ALBUM": "专辑",
@@ -12,41 +12,41 @@
   "ARTIST_SINGLE": "艺术家",
   "ASCENDING": "升序",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "当前专辑播放完毕后自动添加其他歌曲至正在播放列表",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
-  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
-  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "启用无缝播放",
+  "AUTO_REFRESH_SETTING": "重新启动时自动检查新文件",
+  "AUTO_REFRESH_SETTING_TITLE": "启动时自动查找音乐",
   "A_TO_Z": "A 到 Z",
-  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
-  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BACKGROUND_ARTWORK_SUBTITLE": "在屏幕上的内容后面显示最少的艺术作品",
+  "BACKGROUND_ARTWORK_TITLE": "启用背景艺术作品",
   "BUFFERING": "缓冲中...",
   "CANCEL": "取消",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "根据音乐更改“正在播放栏”的颜色",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "动态播放栏着色",
   "COLLECTION": "收藏",
-  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的专辑吗？",
-  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "您确定吗?",
-  "COLLECTION_INDEXING_HINT": "正在添加您的音乐 ...",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "您确定删除 \"NAME\" 专辑吗？",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "删除",
+  "COLLECTION_INDEXING_HINT": "正在添加您的音乐...",
   "COLLECTION_INDEXING_LABEL": "您本地的音乐同步中。\n现在请不要关闭应用。",
   "COLLECTION_INFO_SUBHEADER": "关于专辑",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "更多专辑",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "更多艺术家",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "更多歌曲",
-  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "您确定删除该播放列表吗?",
-  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "您确定吗?",
-  "COLLECTION_SEARCH_LABEL": "查找您的目录中",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "您确定删除 \"NAME\" 播放列表吗?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "删除",
+  "COLLECTION_SEARCH_LABEL": "查找音乐",
   "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "在您的收藏夹中未搜到结果",
   "COLLECTION_SEARCH_NO_RESULTS_TITLE": "没有找到相关结果",
-  "COLLECTION_SEARCH_WELCOME": "从您的收藏中搜索",
+  "COLLECTION_SEARCH_WELCOME": "搜索专辑、曲目或艺术家...",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "搜索后保存的音乐将展示在这里。\n刷新查看最新。",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "最新专辑",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "最新艺术家",
   "COLLECTION_TOP_SUBHEADER_TRACK": "最新歌曲",
   "COLLECTION_TRACKS_SUBHEADER": "专辑中歌曲",
-  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的歌曲吗?",
-  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "您确定吗?",
-  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "您确定删除 \"NAME\" 吗?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "删除",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "从 \"PLAYLIST_NAME\" 中移除 \"TRACK_NAME\" 吗?",
   "COMING_UP": "当前播放",
-  "COPY_LINK": "Copy link",
+  "COPY_LINK": "复制链接",
   "CREATE": "创建",
   "CREATE_NEW_PLAYLIST": "创建新的播放列表",
   "CREATE_PLAYLIST_SUBHEADER": "创建新的播放列表以添加您的歌曲",
@@ -55,35 +55,35 @@
   "DELETE_TRACK": "删除歌曲",
   "DESCENDING": "降序",
   "DISCORD": "DISCORD 服务器",
-  "DISCOVERING_FILES": "Discovering files...",
-  "DONATE": "Donate",
+  "DISCOVERING_FILES": "正在发现文件...",
+  "DONATE": "捐赠",
   "DOWNLOAD_UPDATE": "下载更新",
-  "EDIT_DETAILS": "Edit details",
+  "EDIT_DETAILS": "编辑详细信息",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
   "EXIT_NOW_PLAYING": "退出正在播放",
   "EXIT_SUBTITLE": "您确定退出 Harmonoid 吗?",
   "EXIT_TITLE": "退出",
-  "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
+  "EXPERIMENTAL": "实验性",
+  "EXPERIMENTAL_SUBTITLE": "这些设置尚未标记为稳定",
   "GO_TO_SETTINGS": "前往设置",
-  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
-  "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "与索引相关的操作已经在进行。请稍候。",
+  "INDEXING_ALREADY_GOING_ON_TITLE": "等待",
   "INTERNET_ERROR": "检查您的网络连接。",
   "KNOW_MORE": "了解更多",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "您的收藏中需要只是包括一个目录。",
-  "LESS": "Less",
-  "LISTENING_TO_MUSIC": "Listening to music 💜",
+  "LESS": "较少",
+  "LISTENING_TO_MUSIC": "听音乐 💜",
   "LYRICS": "歌词",
   "LYRICS_NOT_FOUND": "歌词未找到。",
   "LYRICS_RETRIEVING": "获取歌词中...",
   "MENU": "菜单",
-  "MORE": "More",
+  "MORE": "更多",
   "MUTE": "切换静音",
-  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
+  "M_TRACKS_AND_N_ALBUMS": "M 首曲目和 N 张专辑",
   "NEXT": "下一个",
   "NO": "否",
-  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
+  "NOTHING_IN_QUEUE": "队列中没有任何东西。",
   "NOTIFICATION_LYRICS_SUBTITLE": "在通知栏显示歌词。",
   "NOTIFICATION_LYRICS_TITLE": "通知栏歌词",
   "NOW_PLAYING": "正在播放",
@@ -96,11 +96,11 @@
   "NO_INTERNET_SUBTITLE": "检查您的网络",
   "NO_INTERNET_TITLE": "无网络连接",
   "NO_PLAYLISTS_FOUND": "未找到播放列表。\n创建后将会在此显示。",
-  "N_TRACKS": "N tracks",
-  "OK": "好的",
-  "OPEN_IN_BROWSER": "Open in browser",
+  "N_TRACKS": "N 首曲目",
+  "OK": "确定",
+  "OPEN_IN_BROWSER": "在浏览器中打开",
   "OPTIONS": "选项",
-  "ORDER": "Order",
+  "ORDER": "顺序",
   "PAUSE": "暂停",
   "PLAY": "播放",
   "PLAYLIST": "播放列表",
@@ -110,44 +110,44 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "播放列表名",
   "PLAYLIST_ADD_DIALOG_BODY": "选择播放列表添加歌曲",
   "PLAYLIST_ADD_DIALOG_TITLE": "添加到播放列表",
-  "PLAYLIST_SINGLE": "Playlist",
+  "PLAYLIST_SINGLE": "播放列表",
   "PLAYLIST_TRACKS_SUBHEADER": "这里展示的是播放列表中的歌曲",
-  "PLAY_INTERNET": "Play from internet",
+  "PLAY_INTERNET": "从网络播放",
   "PLAY_NOW": "现在播放",
-  "PLAY_URL": "Play URL",
-  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
-  "PREVIOUS": "Previous",
-  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
-  "PROXY_TITLE": "Proxy",
-  "PROXY_URL": "Proxy URL",
+  "PLAY_URL": "播放 URL",
+  "PLAY_URL_SUBTITLE": "输入媒体资源的 URI",
+  "PREVIOUS": "上一个",
+  "PROXY_SUBTITLE": "为外部媒体资源启用代理。",
+  "PROXY_TITLE": "代理",
+  "PROXY_URL": "代理 URL",
   "RECOMMENDATIONS": "推荐",
   "REFRESH": "刷新",
-  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
-  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
+  "REFRESH_INFORMATION": "仅检查新添加或删除的文件即可更新音乐库（更快）",
+  "REFRESH_SUBTITLE": "检查新添加和删除的音乐文件以更新音乐库。",
   "REINDEX": "重新检索",
-  "REINDEX_INFORMATION": "Builds the music library again (slower)",
-  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMOVE": "Remove",
+  "REINDEX_INFORMATION": "再次构建音乐库（较慢）",
+  "REINDEX_SUBTITLE": "清除当前数据库后建立完整的音乐库。",
+  "REMOVE": "移除",
   "REMOVE_FROM_PLAYLIST": "从播放列表移除",
-  "REPEAT": "Repeat",
-  "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
+  "REPEAT": "重复",
+  "RESULTS_FOR_QUERY": "\"QUERY\" 结果",
   "RETRIEVING_INFO": "获取详情中",
   "RETRIEVING_LINK": "获取串流中",
-  "SAVE_AS_PLAYLIST": "Save as playlist",
+  "SAVE_AS_PLAYLIST": "另存为播放列表",
   "SAVE_TO_DOWNLOADS": "保存到下载列表",
   "SEARCH": "搜索",
   "SEARCH_COLLECTION": "搜索收藏夹",
   "SEARCH_HISTORY_SUBHEADER": "您最近搜索记录",
   "SEARCH_NO_RECENT_SEARCHES": "您最近的搜索记录显示在这里",
   "SEARCH_RESULT_LOADER_LABEL": "获取您的音乐中...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "搜索 Harmonoid...",
   "SEE_ALL": "查看全部",
   "SELECTED_DIRECTORIES": "已选择目录：",
   "SELECTED_DIRECTORY": "已选择目录：",
   "SETTING": "设置",
   "SETTING_ACCENT_COLOR_AUTOMATIC": "自动主题",
-  "SETTING_ACCENT_COLOR_SUBTITLE": "切换应用的主题色",
-  "SETTING_ACCENT_COLOR_TITLE": "主题色",
+  "SETTING_ACCENT_COLOR_SUBTITLE": "切换应用的主题颜色",
+  "SETTING_ACCENT_COLOR_TITLE": "主题颜色",
   "SETTING_APP_VERSION_INSTALLED": "安装版本",
   "SETTING_APP_VERSION_LATEST": "最新版本",
   "SETTING_APP_VERSION_SUBTITLE": "应用最新版本信息",
@@ -165,7 +165,7 @@
   "SETTING_LANGUAGE_SUBTITLE": "修改应用语言",
   "SETTING_LANGUAGE_TITLE": "语言",
   "SETTING_MISCELLANEOUS_ENABLE_IOS_SUBTITLE": "设置平台为 TargetPlatform.iOS",
-  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "开启 iOS mechanics",
+  "SETTING_MISCELLANEOUS_ENABLE_IOS_TITLE": "启用 iOS 机制",
   "SETTING_MISCELLANEOUS_SUBTITLE": "应用其他设置",
   "SETTING_MISCELLANEOUS_TITLE": "其他设置",
   "SETTING_STARGAZERS_SUBTITLE": "感谢您的支持",
@@ -175,36 +175,36 @@
   "SETTING_THEME_TITLE": "主题",
   "SHARE": "分享",
   "SHOW_ALBUM": "显示专辑",
-  "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
+  "SHOW_IN_FILE_MANAGER": "在文件管理器中显示",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "跳转到正在播放的屏幕",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "选择要播放的曲目后显示“正在播放屏幕”",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "启用任务栏指示器",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "在任务栏应用程序图标上显示曲目播放百分比",
   "SHUFFLE": "随机播放",
   "SORT": "排序",
-  "SORT_BY": "根据...排序",
-  "SPEED": "播放速度",
-  "STARTING_PLAYBACK": "开启播放中",
-  "STATS_SUBTITLE": "Statistical details about your music library",
-  "STATS_TITLE": "Stats",
+  "SORT_BY": "排序按",
+  "SPEED": "速度",
+  "STARTING_PLAYBACK": "开始播放",
+  "STATS_SUBTITLE": "有关您的音乐库的统计详细信息",
+  "STATS_TITLE": "统计",
   "SWITCH_THEME": "切换主题",
-  "THEME_MODE_DARK": "暗色",
-  "THEME_MODE_LIGHT": "明亮",
+  "THEME_MODE_DARK": "深色",
+  "THEME_MODE_LIGHT": "浅色",
   "THEME_MODE_SYSTEM": "跟随系统",
   "TRACK": "歌曲",
   "TRACKS_FROM_ARTIST": "来自该艺术家的歌曲。",
   "TRACK_SINGLE": "歌曲",
   "TRANSFERS": "传输",
   "UNMUTE": "关闭静音",
-  "UPDATE_AVAILABLE": "Update available: VERSION",
-  "VIDEO_SINGLE": "Video",
+  "UPDATE_AVAILABLE": "可用更新：VERSION",
+  "VIDEO_SINGLE": "视频",
   "WARNING": "警告",
-  "WEB": "YT Music",
+  "WEB": "YT 音乐",
   "WEB_INTERNET_ERROR": "当前离线中，播放一些本地音乐吧。",
   "WEB_NO_RESULTS": "未找到结果。",
   "WEB_WELCOME": "搜索音乐或输入链接",
   "WEB_WELCOME_SUBTITLE": "建议将根据您收听的内容显示在此处。",
-  "WEB_WELCOME_TITLE": "Let's Go",
+  "WEB_WELCOME_TITLE": "让我们开始",
   "YEAR": "发行年份",
   "YES": "是"
 }
