--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -16,8 +16,8 @@
   "AUTO_REFRESH_SETTING": "Verifique automaticamente se há novos arquivos ao iniciar de novo",
   "AUTO_REFRESH_SETTING_TITLE": "Pesquisa automática de música ao iniciar",
   "A_TO_Z": "A à Z",
-  "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
-  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BACKGROUND_ARTWORK_SUBTITLE": "Mostrar arte mínima por trás do conteúdo na tela",
+  "BACKGROUND_ARTWORK_TITLE": "Ativar arte de fundo",
   "BUFFERING": "Carregando...",
   "CANCEL": "CANCELAR",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Mude a cor de \"Barra Tocando Agora\" baseado na música",
@@ -58,14 +58,14 @@
   "DISCOVERING_FILES": "Descobrindo arquivos...",
   "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
-  "EDIT_DETAILS": "Edit details",
+  "EDIT_DETAILS": "Editar detalhes",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
   "EXIT_NOW_PLAYING": "Sair agora da reprodução",
   "EXIT_SUBTITLE": "Você quer nos deixar?",
   "EXIT_TITLE": "Sair",
   "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
+  "EXPERIMENTAL_SUBTITLE": "Essas configurações ainda não estão marcadas como estáveis",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Uma operação relacionada à indexação já está em andamento. Por favor, aguarde.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Aguarde",
@@ -185,8 +185,8 @@
   "SORT_BY": "Ordenar Por",
   "SPEED": "Velocidade",
   "STARTING_PLAYBACK": "Iniciando a reprodução",
-  "STATS_SUBTITLE": "Statistical details about your music library",
-  "STATS_TITLE": "Stats",
+  "STATS_SUBTITLE": "Detalhes estatísticos sobre sua biblioteca de músicas",
+  "STATS_TITLE": "Estatísticas",
   "SWITCH_THEME": "Trocar tema",
   "THEME_MODE_DARK": "Escuro",
   "THEME_MODE_LIGHT": "Claro",
