--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -61,11 +61,13 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
+  "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "再生中を閉じる",
   "EXIT_SUBTITLE": "Harmonoidを終了しますか？",
   "EXIT_TITLE": "終了",
   "EXPERIMENTAL": "実験的",
   "EXPERIMENTAL_SUBTITLE": "これらの設定は実験的なものです",
+  "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "設定に移動する",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "すでにインデックス関連の動作が行われています。しばらくお待ちください。",
   "INDEXING_ALREADY_GOING_ON_TITLE": "お待ちください",
@@ -176,6 +178,7 @@
   "SHARE": "共有",
   "SHOW_ALBUM": "アルバムを表示",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
+  "SHOW_LYRICS": "Hide lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "再生したら再生中画面にジャンプ",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "再生するトラックを選択したら\"再生中画面\"を表示する",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "タスクバーインジケーターを有効にする",
