--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -61,11 +61,13 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
+  "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Закрыть очередь",
   "EXIT_SUBTITLE": "Хотите выйти?",
   "EXIT_TITLE": "Выход",
   "EXPERIMENTAL": "Экспериментальные",
   "EXPERIMENTAL_SUBTITLE": "Эти настройки пока что нестабильны",
+  "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "В НАСТРОЙКИ",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "В данный момент выполняется индексация. Пожалуйста, подождите.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Подождите",
@@ -176,6 +178,7 @@
   "SHARE": "Поделиться",
   "SHOW_ALBUM": "Показать альбом",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
+  "SHOW_LYRICS": "Hide lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
