--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -61,11 +61,13 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Activer la mise à l'échelle à 125%",
   "ENABLE_ACRYLIC_BLUR": "Activer le flou acrylique Windows",
+  "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Quitter \"En cours de lecture\"",
   "EXIT_SUBTITLE": "Voulez-vous quitter Harmonoid ?",
   "EXIT_TITLE": "Quitter",
   "EXPERIMENTAL": "Expérimental",
   "EXPERIMENTAL_SUBTITLE": "Ces paramètres ne sont pas marqués comme étant stables.",
+  "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "Se rendre dans les paramètres",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Une opération d'indexation est déjà en cours. Veuillez patienter.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Patienter",
@@ -176,6 +178,7 @@
   "SHARE": "Partager",
   "SHOW_ALBUM": "Visualiser l'album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
+  "SHOW_LYRICS": "Hide lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Basculer sur l'écran \"En cours de lecture\" lors de la lecture",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Afficher l'écran \"En cours de lecture\" après la sélection d'une piste pour lecture",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Activer l'icône dans la barre des tâches",
