--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -61,11 +61,13 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Aktifkan skala 125% .",
   "ENABLE_ACRYLIC_BLUR": "Aktifkan blur akrilik Windows.",
+  "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Tutup yang sedang dimainkan",
   "EXIT_SUBTITLE": "Apakah anda ingin menutup Harmonoid?",
   "EXIT_TITLE": "Tutup",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "Pengaturan ini belum ditandai sebagai pengaturan stabil.",
+  "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "KE PENGATURAN",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Sedang menjalankan operasi yang berhubungan dengan pendaftaran. Mohon tunggu.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Tunggu",
@@ -176,6 +178,7 @@
   "SHARE": "Bagikan",
   "SHOW_ALBUM": "Tunjukkan album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
+  "SHOW_LYRICS": "Hide lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Lompat ke layar lagu yang sedang dimainkan",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Tunjukkan \"Layar lagu yang sedang dimainkan\" setelah sebuah trek dipilih",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Aktifkan indikator taskbar",
