--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -61,11 +61,13 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Ampandehano ny tohatra manisa 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ampandehano ny 'Windows acrylic blur'.",
+  "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Te hiala amin'ny Harmonoid ve ianao?",
   "EXIT_TITLE": "Miala",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
+  "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
@@ -176,6 +178,7 @@
   "SHARE": "Zaraina",
   "SHOW_ALBUM": "Show album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
+  "SHOW_LYRICS": "Hide lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
