--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -61,11 +61,13 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
+  "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Zapri trenutno predvajano",
   "EXIT_SUBTITLE": "Ali res hočeš zapreti aplikacijo?",
   "EXIT_TITLE": "Izhod",
   "EXPERIMENTAL": "Eksperimentalno",
   "EXPERIMENTAL_SUBTITLE": "Te nastavitve še niso stabilne.",
+  "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Operacija indeksiranja že poteka. Prosimo, počakajte.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Počakajte",
@@ -176,6 +178,7 @@
   "SHARE": "Deli",
   "SHOW_ALBUM": "Pokaži album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
+  "SHOW_LYRICS": "Hide lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Avtomatično preskoči na \"Now playing\" zaslon ko se predvaja pesem",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
