--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -61,11 +61,13 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% ölçeklemeyi etkinleştir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u etkinleştir",
+  "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Harmonoid'den çıkmak istediğine emin misin?",
   "EXIT_TITLE": "Çık",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
+  "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "AYARLARA GİT",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
@@ -176,6 +178,7 @@
   "SHARE": "Paylaş",
   "SHOW_ALBUM": "Albümü görüntüle",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
+  "SHOW_LYRICS": "Hide lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
