--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -61,11 +61,13 @@
   "EDIT_DETAILS": "编辑详细信息",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
+  "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "退出正在播放",
   "EXIT_SUBTITLE": "您确定退出 Harmonoid 吗?",
   "EXIT_TITLE": "退出",
   "EXPERIMENTAL": "实验性",
   "EXPERIMENTAL_SUBTITLE": "这些设置尚未标记为稳定",
+  "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "前往设置",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "与索引相关的操作已经在进行。请稍候。",
   "INDEXING_ALREADY_GOING_ON_TITLE": "等待",
@@ -176,6 +178,7 @@
   "SHARE": "分享",
   "SHOW_ALBUM": "显示专辑",
   "SHOW_IN_FILE_MANAGER": "在文件管理器中显示",
+  "SHOW_LYRICS": "Hide lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "跳转到正在播放的屏幕",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "选择要播放的曲目后显示“正在播放屏幕”",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "启用任务栏指示器",
